kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
  namespace: homework
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
