kubernetes-networks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: homework
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: homework.otus
      http:
        paths:
          - path: /homepage(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: front-service
                port:
                  number: 80
